﻿0.9.5
=====

Bugfixes:


0.9.4
=====

Bugfixes:

  * The SERVERNAME magic word was previously implemented incorrectly and has
    been fixed to return only the server URL ("www.example.com") without an
    "http://" prefix.  Reported by an anonymous user.
  * Several pages including the Special:History page could generate errors on
    Apache 7.0.x due to an invalid JSTL naming convention used with import
    revisions.  Reported by anonymous users.


0.9.3
=====

New Features:

  * Convert parser limits for maximum transclusions, template depth and parser
    iterations to property values to allow more control for sites that need it.

Bugfixes:

  * Fix a potential infinite loop with nested template includes.  Inclusions
    are now limited to a maximum of 250 per page.
  * Setting the default file upload properties could cause initialization
    failures in cases where JAMWiki was deployed without the JAMWiki WAR, such
    as on the Liferay server.  Reported with proposed fixes by Igor Spasic.
  * The {{DISPLAYTITLE}} magic word should affect page title during editing
    and preview.  Reported by an anonymous user.


0.9.2
=====

New Features:

  * Update the LDAP sample in applicationContext-security.xml with an example
    of using LDAP for authentication and JAMWiki for role management.  Provided
    by Bobby Lawrence.

Bugfixes:

  * Fix list parsing for lists that end with </td> or </div>.
  * Fix the manual upgrade steps for namespace in the UPGRADE.txt document.
    Reported by an anonymous user.
  * Fix an issue in which non-image file uploads could fail on some operating
    systems.  Reported by an anonymous user.
  * Fix an invalid "You may not remove ROLE_SYSADMIN from your own account"
    message on the Special:Roles page when updating the sysadmin account.
  * Make sure all tables are properly migrated when using the
    Special:Maintenance "database migration" functionality.


0.9.1
=====

New Features:
