@@ -1,0 +1,8 @@
+<!-- validate TOC with seven levels -->
+=Level 1=
+==Level 2==
+===Level 3===
+====Level 4====
+=====Level 5=====
+======Level 6======
+=======Level 7=======
